; ModuleID = '/home/carl/AnghaBench/mimikatz/modules/extr_sqlite3_omit.c_codeDistinct.c'
source_filename = "/home/carl/AnghaBench/mimikatz/modules/extr_sqlite3_omit.c_codeDistinct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32* }

@OP_Found = common dso_local global i32 0, align 4
@OP_MakeRecord = common dso_local global i32 0, align 4
@OP_IdxInsert = common dso_local global i32 0, align 4
@OPFLAG_USESEEKRESULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i32, i32, i32, i32)* @codeDistinct to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @codeDistinct(%struct.TYPE_5__* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  store i32* %15, i32** %11, align 8
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %17 = call i32 @sqlite3GetTempReg(%struct.TYPE_5__* %16)
  store i32 %17, i32* %12, align 4
  %18 = load i32*, i32** %11, align 8
  %19 = load i32, i32* @OP_Found, align 4
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* %8, align 4
  %22 = load i32, i32* %10, align 4
  %23 = load i32, i32* %9, align 4
  %24 = call i32 @sqlite3VdbeAddOp4Int(i32* %18, i32 %19, i32 %20, i32 %21, i32 %22, i32 %23)
  %25 = load i32*, i32** %11, align 8
  %26 = call i32 @VdbeCoverage(i32* %25)
  %27 = load i32*, i32** %11, align 8
  %28 = load i32, i32* @OP_MakeRecord, align 4
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* %9, align 4
  %31 = load i32, i32* %12, align 4
  %32 = call i32 @sqlite3VdbeAddOp3(i32* %27, i32 %28, i32 %29, i32 %30, i32 %31)
  %33 = load i32*, i32** %11, align 8
  %34 = load i32, i32* @OP_IdxInsert, align 4
  %35 = load i32, i32* %7, align 4
  %36 = load i32, i32* %12, align 4
  %37 = load i32, i32* %10, align 4
  %38 = load i32, i32* %9, align 4
  %39 = call i32 @sqlite3VdbeAddOp4Int(i32* %33, i32 %34, i32 %35, i32 %36, i32 %37, i32 %38)
  %40 = load i32*, i32** %11, align 8
  %41 = load i32, i32* @OPFLAG_USESEEKRESULT, align 4
  %42 = call i32 @sqlite3VdbeChangeP5(i32* %40, i32 %41)
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %44 = load i32, i32* %12, align 4
  %45 = call i32 @sqlite3ReleaseTempReg(%struct.TYPE_5__* %43, i32 %44)
  ret void
}

declare dso_local i32 @sqlite3GetTempReg(%struct.TYPE_5__*) #1

declare dso_local i32 @sqlite3VdbeAddOp4Int(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @VdbeCoverage(i32*) #1

declare dso_local i32 @sqlite3VdbeAddOp3(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @sqlite3VdbeChangeP5(i32*, i32) #1

declare dso_local i32 @sqlite3ReleaseTempReg(%struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
